update res
