# internal/usecases/response/vote_result.go
@@ -1,0 +1,5 @@
+package response
+
+type EntryResponse struct {
+	ID string `json:"id"`
+}
